force-app/main/default/objects/PBS_AAAP_Space__c/PBS_AAAP_Space__c.object-meta.xml
<CustomObject>
    <description>AAAP - This object stores information on the spaces related to a AAAP Offer</description>
    <label>Space</label>
    <nameField>
        <displayFormat>Space-{000000000}</displayFormat>
        <label>Space Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spaces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>