force-app/main/default/objects/PBS_AAAP_Space__c/fields/Is_Historical__c.field-meta.xml
<CustomField>
    <fullName>Is_Historical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Historical</label>
    <type>Checkbox</type>
</CustomField>