force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_ARCHITECTURAL_AND_ENG_FEES_UOM__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_ARCHITECTURAL_AND_ENG_FEES_UOM__c</fullName>
    <description>This picklist allows the user to select whether the architectural and engineering fees are given as an USD amount per ABOA or as a percentage value.</description>
    <inlineHelpText>Unit of Measure for architectural and engineering fee amount.</inlineHelpText>
    <label>Architectural and Engineering Fee UOM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$ Per ABOA SF</fullName>
                <default>true</default>
                <label>$ Per ABOA SF</label>
            </value>
            <value>
                <fullName>%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>