force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_BASE_OPERATING_COSTS__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_BASE_OPERATING_COSTS__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>The Base Year Operating costs for services and utilities 
per ABOA.</description>
    <label>Total Operating Costs per ABOA SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>