force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_Building_Name__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Building_Name__c</fullName>
    <description>Formula field is used for identify winner page</description>
    <formula>PBS_AAAP_OFFER_NUMBER__r.PBS_AAAP_Building_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Name</label>
    <type>Text</type>
</CustomField>