force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_BuildingProblem__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_BuildingProblem__c</fullName>
    <formula>Text(PBS_AAAP_OFFER_NUMBER__r.PBS_AAAP_isBuildingProblem__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Building Problem</label>
    <type>Text</type>
</CustomField>