force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_City__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_City__c</fullName>
    <formula>PBS_AAAP_OFFER_NUMBER__r.PBS_AAAP_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>