force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_ClonedFromSpace__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_ClonedFromSpace__c</fullName>
    <externalId>true</externalId>
    <label>ClonedFromSpace</label>
    <length>50</length>
    <type>Text</type>
</CustomField>