force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_County__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_County__c</fullName>
    <formula>PBS_AAAP_OFFER_NUMBER__r.PBS_AAAP_County__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>County</label>
    <type>Text</type>
</CustomField>