force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_DATE_SPACE_AVAILABILITY__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_DATE_SPACE_AVAILABILITY__c</fullName>
    <description>What is the date of availability of space for commencement of tenant
improvements*?</description>
    <inlineHelpText>Date that the space is available.</inlineHelpText>
    <label>Date Space Available</label>
    <type>Date</type>
</CustomField>