force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_Enhanced_Clean_Disinfect_Rate__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Enhanced_Clean_Disinfect_Rate__c</fullName>
    <description>Portion of Shell rate dedicated to Routine Enhanced Cleaning &amp; Disinfecting of Premises to comply with rent requirement as described in &quot;Janitorial Services&quot; of the lease, sub-paragraph N.</description>
    <label>Enhanced Clean Disinfect per ABOA SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>