force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_FLOOR_INDICATOR__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_FLOOR_INDICATOR__c</fullName>
    <description>The floor indicator for the space</description>
    <label>Floor Indicator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>