force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_Formula_Energy_Star__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Formula_Energy_Star__c</fullName>
    <formula>Text(PBS_AAAP_OFFER_NUMBER__r.PBS_AAAP_Energy_Star__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Energy Star</label>
    <type>Text</type>
</CustomField>