force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_Formula_Hist_Property__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Formula_Hist_Property__c</fullName>
    <formula>IF(PBS_AAAP_OFFER_NUMBER__r.PBS_AAAP_isHistoricProperty__c ,&apos;Yes&apos;,&apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Hist Property</label>
    <type>Text</type>
</CustomField>