force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_Formula_HUB_ZONE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Formula_HUB_ZONE__c</fullName>
    <formula>Text(PBS_AAAP_OFFER_NUMBER__r.PBS_AAAP_HUBZONE_IDENTIFIER__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula HUB ZONE</label>
    <type>Text</type>
</CustomField>