force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_GC_CONDITIONS__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_GC_CONDITIONS__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>General Contractor&apos;s general conditions as a percentage of the initial
tenant improvements up to $45.59 per ABOA, including change orders,
for the block of space offered?</description>
    <inlineHelpText>General Conditions</inlineHelpText>
    <label>General Contractor&apos;s General Conditions</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>