force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_GC_OVERHEAD_AND_PROF__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_GC_OVERHEAD_AND_PROF__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>General Contractor&apos;s overhead and profit as a percentage of the initial
tenant improvements up to $45.59 per ABOA, including change orders,
for the block of space offered*?</description>
    <inlineHelpText>General Contractor&apos;s overhead and profit.</inlineHelpText>
    <label>Lessor&apos;s PM Fees</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>