force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_GSA_EXPIRE_LEASE_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_GSA_EXPIRE_LEASE_NUMBER__c</fullName>
    <description>Expiring GSA Lease Number*:</description>
    <inlineHelpText>Lease number of the lease that is expiring.</inlineHelpText>
    <label>Expiring Lease Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>