force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_IDENTIFIER__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_IDENTIFIER__c</fullName>
    <description>Space identifier value.</description>
    <inlineHelpText>Identifier</inlineHelpText>
    <label>Identifier</label>
    <length>19</length>
    <type>Text</type>
</CustomField>