force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_IDENTIFIER_ID__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_IDENTIFIER_ID__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <description>ID for a particular space record.</description>
    <inlineHelpText>Space identifier.</inlineHelpText>
    <label>Identifier ID</label>
    <length>22</length>
    <required>true</required>
    <type>Text</type>
</CustomField>