force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_IDENTIFIER_TO__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_IDENTIFIER_TO__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Maximum Space Range</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>