force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_IDENTIFIER_TYPE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_IDENTIFIER_TYPE__c</fullName>
    <description>This field specifies what sort of space record to create, a &quot;new space&quot; or a &quot;succeeding space&quot;.</description>
    <label>Identifier Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Available ABOA</fullName>
                <default>true</default>
                <label>All Available ABOA</label>
            </value>
            <value>
                <fullName>Range of ABOA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>