force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_isHUBZone_Area__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_isHUBZone_Area__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isHUBZone Area</label>
    <type>Checkbox</type>
</CustomField>