force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_isMetroProximity__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_isMetroProximity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMetroProximity</label>
    <type>Checkbox</type>
</CustomField>