force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_isSelected__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_isSelected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSelected</label>
    <type>Checkbox</type>
</CustomField>