force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_LEGACY_EXTERNAL_ID__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_LEGACY_EXTERNAL_ID__c</fullName>
    <externalId>true</externalId>
    <label>PBS_AAAP_LEGACY_EXTERNAL_ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>