force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_LOCATION_OF_FLOORS__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_LOCATION_OF_FLOORS__c</fullName>
    <label>Location of Floor(s)</label>
    <length>27</length>
    <type>Text</type>
</CustomField>