force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_MANAGEMENT_COORD_FEES__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_MANAGEMENT_COORD_FEES__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Offeror&apos;s construction management/coordination fees as a percentage of the initial tenant improvements up to some dollar amount per ABOA, including change orders, for the block of space offered:</description>
    <inlineHelpText>Management and coordination fees.</inlineHelpText>
    <label>Management Coordination Fees</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>