force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_Master_Space__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Master_Space__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Space</label>
    <referenceTo>PBS_AAAP_Space__c</referenceTo>
    <relationshipLabel>Spaces</relationshipLabel>
    <relationshipName>Spaces</relationshipName>
    <type>Lookup</type>
</CustomField>