force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_Max_Contiguous_Space__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Max_Contiguous_Space__c</fullName>
    <defaultValue>0</defaultValue>
    <description>What is the max contiguous ABOA available*?</description>
    <label>Max Contiguous ABOA SF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>