force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_MAX_OFFERABLE_SPACE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_MAX_OFFERABLE_SPACE__c</fullName>
    <defaultValue>0</defaultValue>
    <description>What is the total ANSI/BOMA Office SF available for lease to the
Government? -- MAX --</description>
    <label>Max Offerable ABOA SF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>