force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_NEW_SUCCEED_LEASE_IND__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_NEW_SUCCEED_LEASE_IND__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field indicates whether the space is considered &quot;new&quot; in that this space would belong to a new lease.  The space would be considered &quot;succeeding&quot; if this space were to be associated to an existing lease or lease renewal.</description>
    <inlineHelpText>Uncheck this value to indicate a &quot;succeeding&quot; space.</inlineHelpText>
    <label>New Space</label>
    <type>Checkbox</type>
</CustomField>