force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_OFFER_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_OFFER_NUMBER__c</fullName>
    <description>The offer number with which the space will be associated.</description>
    <inlineHelpText>Offer Number</inlineHelpText>
    <label>Offer Number</label>
    <referenceTo>PBS_AAAP_Offer__c</referenceTo>
    <relationshipLabel>Spaces</relationshipLabel>
    <relationshipName>Spaces</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>