force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_Offeror_Created_BSAC__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Offeror_Created_BSAC__c</fullName>
    <label>Offeror Created BSAC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>