force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_OPERATING_COSTS__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_OPERATING_COSTS__c</fullName>
    <description>The Base Year Operating costs for services and utilities
per ABOA.</description>
    <formula>PBS_AAAP_OFFER_NUMBER__r.PBS_AAAP_COST_PER_ABOA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Operating Costs per ABOA SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>