force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_Proximity_to_Metro__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Proximity_to_Metro__c</fullName>
    <formula>Text(PBS_AAAP_OFFER_NUMBER__r.PBS_AAAP_Close_To_Metro__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proximity to Metro</label>
    <type>Text</type>
</CustomField>