force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_Rate_Records_Count__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Rate_Records_Count__c</fullName>
    <label>Rate Records Count</label>
    <summaryForeignKey>PBS_AAAP_Rate__c.PBS_AAAP_SPACE__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>