force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_Res_Garage_Parking__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Res_Garage_Parking__c</fullName>
    <formula>PBS_AAAP_OFFER_NUMBER__r.PBS_AAAP_Monthly_cost_res_gar_park__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Reserved Garage Parking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>