force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_RLP__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_RLP__c</fullName>
    <formula>PBS_AAAP_OFFER_NUMBER__r.PBS_AAAP_RLP_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RLP</label>
    <type>Text</type>
</CustomField>