force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_SF_OFFERED__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_SF_OFFERED__c</fullName>
    <label>ABOA SF Offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>