force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_SUITE_INDICATOR__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_SUITE_INDICATOR__c</fullName>
    <description>The building suite in which the space exists.</description>
    <label>Suite Indicator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>