force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_Total_ABOA_Selected__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Total_ABOA_Selected__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total ABOA SF Selected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>