force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_Total_Actual_Space_Available__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Total_Actual_Space_Available__c</fullName>
    <description>Total Actual Space available for withdrawn or edit.</description>
    <formula>PBS_AAAP_SF_OFFERED__c  -  (PBS_AAAP_Total_ABOA_Awarded__c  +  PBS_AAAP_Total_ABOA_Selected__c  +  PBS_AAAP_Total_ABOA_Withdrawn__c +  PBS_AAAP_Total_ABOA_Edited__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Actual ABOA SF Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>