force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_TOTAL_MARKUP__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_TOTAL_MARKUP__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Total Markup per ABOA SF</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>