force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_Total_Parking_Spaces__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Total_Parking_Spaces__c</fullName>
    <formula>PBS_AAAP_OFFER_NUMBER__r.PBS_AAAP_Total_Parking_Spaces__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Parking Spaces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>