force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_Type_of_Space__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Type_of_Space__c</fullName>
    <formula>Text(PBS_AAAP_OFFER_NUMBER__r.PBS_AAAP_Type_of_Space__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Space</label>
    <type>Text</type>
</CustomField>