force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_X_lat__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_X_lat__c</fullName>
    <formula>PBS_AAAP_OFFER_NUMBER__r.PBS_AAAP_X_CO_ORD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X CO-Ordinator</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>