force-app/main/default/objects/PBS_AAAP_Space__c/fields/PBS_AAAP_Y_lng__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Y_lng__c</fullName>
    <formula>PBS_AAAP_OFFER_NUMBER__r.PBS_AAAP_Y_CO_ORD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Y CO-Ordinator</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>