force-app/main/default/objects/PBS_AAAP_Space__c/fields/SpaceExternalId__c.field-meta.xml
<CustomField>
    <fullName>SpaceExternalId__c</fullName>
    <externalId>true</externalId>
    <label>SpaceExternalId</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>