force-app/main/default/objects/PBS_AAAP_Space__c/validationRules/Sq_Footage_Required_for_Succeeding.validationRule-meta.xml
<ValidationRule>
    <fullName>Sq_Footage_Required_for_Succeeding</fullName>
    <active>true</active>
    <description>A succeeding space must also include the total number of square footage that is being offered.</description>
    <errorConditionFormula>AND( NOT(PBS_AAAP_NEW_SUCCEED_LEASE_IND__c), 
          OR( ISBLANK( PBS_AAAP_SF_OFFERED__c ),
                   ISNULL(PBS_AAAP_SF_OFFERED__c ),
                   PBS_AAAP_SF_OFFERED__c &lt;= 0
              )
       )</errorConditionFormula>
    <errorMessage>You must include the square footage being offered for a succeeding space.</errorMessage>
</ValidationRule>