force-app/main/default/objects/PBS_AAAP_Space__c/listViews/TestBuilding.listView-meta.xml
<ListView>
    <fullName>TestBuilding</fullName>
    <columns>NAME</columns>
    <columns>PBS_AAAP_Building_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PBS_AAAP_Building_Name__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>SpaceExternalId__c</field>
        <operation>equals</operation>
        <value>a0Ar0000000n3dtEAA</value>
    </filters>
    <label>Test</label>
</ListView>